manifests-devsecops/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: myapp-maven
    namespace: myapp-gxx-devsecops
spec:
    replicas: 1
    selector:
        matchLabels:
            app: maven
    template:
        metadata:
            labels:
                app: maven
        spec:
            containers:
                - name: my-app
                  image: arezkiguezout/myapp-base-devsecops:36
