manifests-devsecops/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: myapp-svc
    namespace: myapp-gxx-devsecops
spec:
    selector:
        app: maven
    type: NodePort
    ports:
        - port: 8080
          targetPort: 8080
