manifests-devsecops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-gxx-devsecops-ingress
  namespace: myapp-gxx-devsecops
spec:
  ingressClassName: nginx
  rules:
  - host: "myapp-gxx-devsecops.lan"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-svc
            port:
              number: 8080
